--- a/MAPTOGETHER.html
+++ b/MAPTOGETHER.html
@@ -20,7 +20,7 @@
     <div id="mapid" style="width: 600px; height: 400px;"></div>
     <script type="text/javascript">
       var mymap = L.map('mapid').setView([51.505, -0.09], 13);
-      L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={pk.eyJ1IjoiZ3VjY2NjY2hpaWlpIiwiYSI6ImNrODA5dHlmdzBkaW4za3JsdzkwOHNxd2kifQ.eNG89oxwLVTA9_hNSIklew}', {
+      L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoiZ3VjY2NjY2hpaWlpIiwiYSI6ImNrODA5dHlmdzBkaW4za3JsdzkwOHNxd2kifQ.eNG89oxwLVTA9_hNSIklew', {
     attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
     maxZoom: 18,
     id: 'mapbox/streets-v11',
