--- a/MAPTOGETHER.html
+++ b/MAPTOGETHER.html
@@ -14,13 +14,13 @@
      crossorigin=""></script>
 </head>
   <body>
-    <div id="mapid" style="width: 1600px; height: 1400px;"></div>
+    <div id="mapid" style="width: 1200px; height: 800px;"></div>
     <script type="text/javascript">
       var mymap = L.map('mapid').setView([51.505, -0.09], 13);
       L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoiZ3VjY2NjY2hpaWlpIiwiYSI6ImNrODA5dHlmdzBkaW4za3JsdzkwOHNxd2kifQ.eNG89oxwLVTA9_hNSIklew', {
     attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
     maxZoom: 18,
-    id: 'mapbox/satellite-v9',
+    id: 'mapbox/streets-v11',
     tileSize: 512,
     zoomOffset: -1,
     accessToken: 'pk.eyJ1IjoiZ3VjY2NjY2hpaWlpIiwiYSI6ImNrODA5dHlmdzBkaW4za3JsdzkwOHNxd2kifQ.eNG89oxwLVTA9_hNSIklew'
