--- a/MAPTOGETHER.html
+++ b/MAPTOGETHER.html
@@ -25,6 +25,7 @@
     zoomOffset: -1,
     accessToken: 'pk.eyJ1IjoiZ3VjY2NjY2hpaWlpIiwiYSI6ImNrODA5dHlmdzBkaW4za3JsdzkwOHNxd2kifQ.eNG89oxwLVTA9_hNSIklew'
 }).addTo(mymap);
+      var marker = L.marker([35.0007581,135.7544149]).addTo(mymap);
     </script>
   </body>
   </html>
